Added a basic JavaScript alert to the page

--- a/HelloHTML/index.html
+++ b/HelloHTML/index.html
@@ -5,6 +5,9 @@
         <meta name="description" content="A simple introduction to HTML" >
         <meta name="author" content="Sreekar Swarnapuri">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" >
+        <script>
+            alert("Hello JavaScript");
+        </script>
     </head>
     <body>
         Hello WORLD! I am learning HTML!
